with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

New Features for 3.28.1
=======================
[] Portuguese (Brazil) installation instructions added, thanks to Andreas.

Changes to Existing Features in 3.28.1
======================================
None

Bugs fixed in 3.28.1
====================
[3510590] Password History is now correctly repaired if found in error during
the automatic Validate on database open.
[3508891] Editing an entry's Notes using an external editor no longer adds blank lines
and fully supports non-Latin characters.
[3498625] Test selected password policy now reflects any edits done to the policy.
[3495473} Notes Word Wrap during edit now works again.

New Features for 3.28
=====================
[3468289] The passwords in the Password History and in the List view now
displayed with the specified Password Font. In addition, you can now zoom
in and out of the Notes field, for easy reading of texts.
[3455436] The password history can now be deleted for all existing entries
in a database at once (optionally including Protected Entries).
[3421963] Multiple Password Policies can now be defined, managed and
selected in entries to generate passwords.
[] Partial support for Czech has been added, thanks to butchtik.

Changes to Existing Features in 3.28
====================================
[3445820] The Edit menu item and entry right-click context menu item "Copy Run Command to
Clipboard" will now substitute any variables within the command. This can
be disabled by holding down the Ctrl key when selecting these menu
items. (Note that the standard menu shortcut can't be used to disable, as
the Ctrl key may be used to select a different menu item/command.)